Tue Jan 5  8:52:18 PST 1999 Bruce Korb (korb@datadesign.com)

	* fixinc/fixincl.c (various): added debug code so
	Manfred can trace the processing.

Sun Jan 3 23:32:18 PST 1999 Jeff Law  (law@cygnus.com)

	* version.c: Bump for snapshot.

Sun Jan  3 23:00:42 1999  Jeffrey A Law  (law@cygnus.com)

	* optabs.c (emit_cmp_and_jump_insns): Use CONSTANT_P canonicalizing
	RTL for a compare/jump sequence.
	
Sun Jan  3 22:58:15 1999  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>

	* optabs.c (emit_cmp_insn): Abort if asked to emit non-canonical RTL
	for a target with HAVE_cc0 defined.
	(emit_cmp_and_jump_insns): New function.
	* expr.h (emit_cmp_and_jump_insns): Prototype it.
	* loop.c (check_dbra_loop): Use it to replace calls
	to emit_cmp_insn and emit_jump_insn and to canonicalise
	the comparison if necessary.
	* unroll.c (unroll_loop): Likewise.

Sun Jan  3 21:01:04 1999  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* fixincludes (sys/utsname.h): Provide forward declaration of
	struct utsname on Ultrix V4.[35].

	* mips.md (div_trap): Use local labels instead of dot-relative
	branches.

Sun Jan  3 20:40:34 1999  Jeffrey A Law  (law@cygnus.com)

	* pa.md (branch, negated branch): Handle (const_int 0) as first
	source operand.
	* pa.c (output_cbranch): Likewise.

Sun Jan  3 03:20:38 1999  David Edelsohn  <edelsohn@mhpcc.edu>

	* rs6000.c (rs6000_stack_info): Undo spurious part of last
	change.

1999-01-01  Manfred Hollstein  <manfred@s-direktnet.de>

	* extend.texi (__builtin_constant_p): Add missing @smallexample.

Fri Jan  1 11:48:20 1999  Jeffrey A Law  (law@cygnus.com)

	* i386.md (doubleword shifts): Fix dumb mistakes in previous change.

Wed Dec 30 23:38:55 1998  Jeffrey A Law  (law@cygnus.com)

	* m68k.md (adddi_dilshr32): Allow all operands to be registers too.
	(adddi_dishl32): Similarly.

	* cse.c (invalidate_skipped_block): Call invalidate_from_clobbers
	for each insn in the skipped block.

	* reload1.c (reload_as_needed): Verify that the insn satisfies its