@@ -2,7 +2,7 @@
 #
 # DO NOT EDIT THIS FILE   (fixincl.sh)
 # 
-# It has been autogen-ed  Tuesday December  8, 1998 at 12:15:19 PM 
+# It has been autogen-ed  Tuesday January  5, 1999 at 09:22:32 AM PST
 # From the definitions    inclhack.def
 # and the template file   inclhack.tpl
 #
@@ -10,7 +10,7 @@
 # files which are fixed to work correctly with ANSI C and placed in a
 # directory that GNU C will search.
 #
-# This script contains 104 fixup scripts.
+# This script contains 105 fixup scripts.
 #
 # See README-fixinc for more information.
 #
